--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@contentful/forma-36-fcss": "^0.0.27",
-    "@contentful/forma-36-react-components": "^3.15.14",
-    "@contentful/forma-36-tokens": "^0.4.1",
-    "contentful-ui-extensions-sdk": "3.7.2",
+    "@contentful/forma-36-react-components": "^3.86.0",
+    "@contentful/forma-36-tokens": "^0.4.5",
+    "contentful-ui-extensions-sdk": "^3.7.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "whatwg-fetch": "3.0.0"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "prestart": "contentful extension update --src http://localhost:1234 --force",
